fixed nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,7 @@ br {
 
   .masthead-intro p {
     font-size: 1.2em;
-    margin-bottom: 12px; 
+/*    margin-bottom: 12px; */
   }
 
   br {
